--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,82 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(24, 24, 24);;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h3{
+  text-align: center;
+  width: 100%;
+  color: white;
+  font-size: 1.5rem;
+}
+
+form{
+  margin-top: 200px;
+  width: 600px;
+  display: table;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(47, 37, 90);;
+  border-radius: 15px;
+  padding-bottom: 50px;
+}
+
+#name, #surname{
+  box-sizing: border-box;
+  float: left;
+  width: 39%;
+  font-size: 1.5rem;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+#name{
+  margin-left: 10%;
+  margin-right: 1%;
+}
+
+#surname{
+  margin-right: 10%;
+  margin-left: 1%;
+}
+
+#mail{
+  box-sizing: border-box;
+  width: 80%;
+  font-size: 1.5rem;
+  margin-left: 10%;
+  margin-right: 10%;
+  display: inline-block;
+  border-radius: 10px;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+#button{
+  height: 50px;
+  width: 50%;
+  margin: 50px 25% 10px 25% ;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  border: none;
+  background-color: rgb(255, 255, 255);;
+}
+
+
+#button:hover{
+  background-color: azure;
+  cursor: pointer;
+}
+
+.error{
+  background-color: rgb(255, 152, 152);
+}
+
+input{
+  border: none;
 }
